# SOFTX_2020_128

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  configure.sh  omicron.env.sh.in
cmt/: requirements  requirements.rootv5
doc/: CMakeLists.txt  Doxyfile.in  main.dox  omicron.env.sh  rundox.sh
doc/examples/: parameters.txt
doc/style/: header.html
html/: template.omicronmonitor.html  template.omicronscan.html
html/monitoringweb/: calendar.html  getomicronchannels.php  getomicronpage.php  getomiscan.php  header.html  index.html  logo.html  omiscan.html
html/pics/: omicronlogo.psd
html/style/: style.FIRE.css  style.GWOLLUM.css  style.PINK.css  style.STANDARD.css
html/template/: comparison_mode.html  template.omicronmonitor.html  template.omicronscan.html
paper/: Makefile  algorithm.tex  analysis.tex  characterization.tex  conclusion.tex  introduction.tex  limitations.tex  method.tex  paper.tex  parameters.tex  qtransform.tex  references.bib
paper/figures/: boxplot.eps  char_Q_freq.eps  char_Q_freq.root  char_Q_snr.eps  char_Q_snr.root  char_Q_time.eps  char_Q_time.root  char_cw_freq.eps  char_cw_freq.root  char_cw_line345.eps  char_cw_line345.root  char_cw_line60.eps  char_cw_line60.root  char_cw_snr.eps  char_cw_snr.root  char_cw_snrfreq.eps  char_cw_snrfreq.root  char_dtfreq.eps  char_dtfreq.root  char_dtsnr.eps  char_dtsnr.root  char_mismatch_freq.eps  char_mismatch_freq.root  char_mismatch_snr.eps  char_mismatch_snr.root  char_mismatch_time.eps  char_mismatch_time.root  char_rffreq.eps  char_rffreq.root  char_rfsnr.eps  char_rfsnr.root  char_rsnrfreq.eps  char_rsnrfreq.root  char_rsnrsnr.eps  char_rsnrsnr.root  char_snrsnr.eps  char_snrsnr.root  conditioning.eps  conditioning.root  gw150914_full.eps  (+49 more)
parameters/: channels.txt  scan.POSTER5.txt  scan.parameters.ER3.min.txt  scan.parameters.ER3.sel.txt  scan.parameters.ER3.std.txt  scan.parameters.V1.VSR2.min.txt  scan.parameters.V1.VSR2.sel.txt  scan.parameters.V1.VSR2.std.txt  scan.parameters.VSR2.min.txt  scan.parameters.VSR2.sel.txt  scan.parameters.VSR2.std.txt
scripts/: GetOmicronChannels.sh  GetOmicronDAG.sh  GetOmicronOptions.sh  GetOmicronPlots.sh  GetOmicronScan.sh  GetOmicronTriggers.sh  GetOmicronWeb.sh  GetTriggerFileList.sh  MakeOmicronScan.sh  MakeOmicronWeb.sh  Online2Offline.sh  PrepareOmicronWeb.sh  omicron.sub  parameters.template
scripts/LIGO/: channels.H1  channels.L1  parameters_high.txt  parameters_low.txt  postprocess.sh  process.sh  process.sh.inprogress  reprocess.sh
sources/: omicron-2.3.13.options  omicron-2.3.13.pre-configure.sh  omicron-2.3.13.tar.xz
src/: CMakeLists.txt  LinkDef.h  Makefile  Oconfig.h.in  Odata.cc  Odata.h  Ohtml.cc  Oinject.cc  Oinject.h  Omap.cc  Omap.h  Omicron.cc  Omicron.h  OmicronUtils.cc  OmicronUtils.h  Oomicron.cc  Oomicron.h  Oparameters.cc  Oplot.cc  Oplot.h  Oqplane.cc  Oqplane.h  Oscan.cc  Oscanreport.cc  Otile.cc  Otile.h  Outils.cc  omicron-listfile.cc  omicron-metric-print.cc  omicron-plot.cc  omicron-print.cc  omicron-scanfile.cc  omicron.cc  omicron.pc.in  omicronplot.cc  omiplot.cc  omiscan.cc  omiwatch.cc  parameters.txt
